# ModelDeploy

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  decl.h  funasr-onnx-offline.cpp  main.cpp  memory.md  pyproject.toml  surveillance_stdout.txt  utils.cpp  utils.h  wrzs_capi.cpp  wrzs_capi.h
application/: CMakeLists.txt  batch_scheduler.cpp  batch_scheduler.hpp  config.cpp  config.hpp  debug_load.cpp  draw_engine.cpp  draw_engine.hpp  frame_pool.cpp  frame_pool.hpp  http_server.cpp  http_server.hpp  infer_group.cpp  infer_group.hpp  inference_engine.cpp  inference_engine.hpp  main.cpp  perf_stats.cpp  perf_stats.hpp  pipeline.cpp  pipeline.hpp  pipeline_manager.cpp  pipeline_manager.hpp  stream_decoder.cpp  stream_decoder.hpp  stream_encoder.cpp  stream_encoder.hpp  stream_hub.cpp  stream_hub.hpp  web_ui.html
application/tests/: test_config.cpp  test_draw_engine.cpp  test_frame_pool.cpp  test_http_server.cpp  test_infer_group.cpp  test_inference_engine.cpp  test_perf_stats.cpp  test_pipeline.cpp  test_pipeline_manager.cpp  test_stream_decoder.cpp  test_stream_encoder.cpp
benchmark/: CMakeLists.txt  benchmark_image_data.cpp  benchmark_main.cpp  benchmark_yolo_preproc.cpp
cmake/: asr.cmake  (+8 more)
examples/: CMakeLists.txt
examples/demo_asr/: CMakeLists.txt  demo_asr_2pass_buffer.cpp  demo_asr_offline_file.cpp
examples/demo_asr_2pass/: CMakeLists.txt  demo_asr_2pass_buffer.cpp  main.cpp
examples/demo_audio/: CMakeLists.txt  demo_kokoro_capi.cpp  demo_kokoro_cxx.cpp  demo_kokoro_tts_capi.cpp  demo_kokoro_tts_cxx.cpp  demo_sense_voice_capi.cpp  demo_sense_voice_cxx.cpp  demo_sense_voice_cxx1.cpp
examples/demo_carplate_detection/: demo_carplate_detection_cxx.cpp
examples/demo_carplate_detection111111/: CMakeLists.txt  demo_carplate_detection_cxx.cpp
examples/demo_carplate_recognizer/: CMakeLists.txt  demo_carplate_recognizer_cxx.cpp
examples/demo_classification/: CMakeLists.txt  demo_classification.cpp  demo_classification_capi.cpp  demo_classification_cxx.cpp
examples/demo_cls/: CMakeLists.txt  demo_classification_capi.cpp  demo_classification_cxx.cpp
examples/demo_det/: CMakeLists.txt  demo_detection_batch.cpp  demo_detection_capi.cpp  demo_detection_cxx.cpp  demo_detection_multi_thread.cpp  demo_detection_multi_thread_trt.cpp
examples/demo_detection/: CMakeLists.txt  demo_detection.cpp  demo_detection_capi.cpp  demo_detection_cxx.cpp  main.cpp
examples/demo_face/: CMakeLists.txt  Struct_cv.h  demo_face.cpp  demo_face_age_capi.cpp  demo_face_age_cxx.cpp  demo_face_as_first_capi.cpp  demo_face_as_first_cxx.cpp  demo_face_as_pipeline_capi.cpp  demo_face_as_pipeline_cxx.cpp  demo_face_as_second_capi.cpp  demo_face_as_second_cxx.cpp  demo_face_capi.cpp  demo_face_det_capi.cpp  demo_face_det_cxx.cpp  demo_face_gender_capi.cpp  demo_face_gender_cxx.cpp  demo_face_rec_capi.cpp  demo_face_rec_cxx.cpp  demo_face_rec_pipeline_capi.cpp  demo_face_rec_pipeline_cxx.cpp  demo_face_recognition_cxx.cpp
examples/demo_face_age/: CMakeLists.txt  demo_face_age_cxx.cpp
examples/demo_face_antispoof/: CMakeLists.txt  demo_face_antispoof_first_cxx.cpp  demo_face_antispoof_second_cxx.cpp
examples/demo_face_as/: CMakeLists.txt  demo_face_as_pipeline_cxx.cpp  demo_face_as_second_cxx.cpp
examples/demo_face_detection/: CMakeLists.txt  demo_face_det_cxx.cpp
examples/demo_face_gender/: CMakeLists.txt  demo_face_gender_cxx.cpp
examples/demo_face_id/: CMakeLists.txt  demo_face_id_cxx.cpp  demo_faceid_cxx.cpp
examples/demo_faceid/: demo_faceid_cxx.cpp
examples/demo_image/: CMakeLists.txt  demo_image_from_base64.cpp  demo_image_from_bgr24.cpp  demo_image_rotate.cpp
examples/demo_instance_seg/: CMakeLists.txt  demo_instance_seg_capi.cpp  demo_instance_seg_cxx.cpp
examples/demo_iseg/: demo_instance_seg_capi.cpp  demo_instance_seg_cxx.cpp
examples/demo_kps/: CMakeLists.txt  demo_keypoint_cxx.cpp  demo_pose_capi.cpp  demo_pose_cxx.cpp
examples/demo_lpr/: CMakeLists.txt  demo_lpr_detection_capi.cpp  demo_lpr_detection_cxx.cpp  demo_lpr_pipeline_capi.cpp  demo_lpr_pipeline_cxx.cpp  demo_lpr_recognizer_capi.cpp  demo_lpr_recognizer_cxx.cpp
examples/demo_lpr_detection/: CMakeLists.txt  demo_lpr_detection_cxx.cpp
examples/demo_lpr_pipeline/: CMakeLists.txt  demo_lpr_pipeline_cxx.cpp
examples/demo_lpr_recognizer/: CMakeLists.txt  demo_lpr_recognizer_cxx.cpp
examples/demo_obb/: CMakeLists.txt  demo_obb_capi.cpp  demo_obb_cxx.cpp
examples/demo_ocr/: CMakeLists.txt  demo_ocr_capi.cpp  demo_ocr_common.cpp  demo_ocr_cxx.cpp  demo_ocr_det_cxx.cpp  demo_ocr_position.cpp  demo_ocr_rec_cxx.cpp  demo_ocr_recognition_capi.cpp  demo_ocr_recognition_capi_batch.cpp  demo_pp_structure_table_capi.cpp  demo_pp_structure_table_cxx.cpp  demo_structure_table_cxx.cpp  main.cpp
examples/demo_pipeline/: CMakeLists.txt  demo_pedestrian_attribute_capi.cpp  demo_pedestrian_attribute_cxx.cpp  pedestrian_attribute_capi.cpp  pedestrian_attribute_cxx.cpp
examples/demo_pose/: CMakeLists.txt  demo_pose_capi.cpp  demo_pose_cxx.cpp
examples/demo_utils/: CMakeLists.txt  demo_utils.cpp
examples/serving/: client.py  client_infer.py  client_pipeline.py  client_post.py  client_pre.py  demo_detection.py  demo_infer.py  demo_runtime_infer.py  model.py
examples/serving/pipeline/: config.pbtxt
examples/serving/postprocess/: config.pbtxt
examples/serving/preprocess/: config.pbtxt
examples/serving/yolo11n/: config.pbtxt
examples/tools/: CMakeLists.txt  model_encrypted.cpp
rust/modeldeploy/: Cargo.toml  build.rs
rust/modeldeploy/examples/: classification.rs  detection.rs  face_age.rs  face_detection.rs  face_extra.rs  face_gender.rs  face_rec.rs  obb.rs  obb_iseg_pose.rs  pose.rs  seg.rs
rust/modeldeploy/src/: error.rs  ffi.rs  image.rs  lib.rs  runtime.rs  types.rs
tests/: CMakeLists.txt  test_capi_image.cpp  test_core.cpp  test_create_ocr_model.cpp  test_detection.cpp  test_detection.cs  test_encryption.cpp  test_face.cpp  test_get_text_position.cpp  test_image_data.cpp  test_md_image.cpp  test_ocr.cpp  test_vision_models.cpp  utils.cpp  utils.h
tests/test_images/: test_base64_image.txt
(+664 files in other folders)
