add_subdirectory(demo_image)
add_subdirectory(demo_ocr)
add_subdirectory(demo_classification)
add_subdirectory(demo_detection)
add_subdirectory(demo_face_detection)
add_subdirectory(demo_face_age)
add_subdirectory(demo_face_id)
add_subdirectory(demo_face_gender)
add_subdirectory(demo_face_antispoof)
add_subdirectory(demo_lpr_detection)
add_subdirectory(demo_lpr_recognizer)
add_subdirectory(demo_lpr_pipeline)

if (BUILD_FACE)
    add_subdirectory(demo_face)
endif ()

if (BUILD_AUDIO)
    add_subdirectory(demo_audio)
endif ()