add_subdirectory(demo_image)
add_subdirectory(demo_ocr)
add_subdirectory(demo_classification)
add_subdirectory(demo_detection)
add_subdirectory(demo_obb)
add_subdirectory(demo_pose)
add_subdirectory(demo_instance_seg)
add_subdirectory(demo_face)
add_subdirectory(demo_lpr)
add_subdirectory(demo_audio)